Add some flash cards

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["gridlayout", "kivy"]
+  "cSpell.words": ["gridlayout", "kivy"],
+  "python.analysis.typeCheckingMode": "basic"
 }
