Make the splash text scrollable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
-  "cSpell.words": ["gridlayout", "boxlayout", "floatlayout", "kivy"],
+  "cSpell.words": [
+    "gridlayout",
+    "boxlayout",
+    "floatlayout",
+    "scrollview",
+    "kivy"
+  ],
   "python.analysis.typeCheckingMode": "basic"
 }
