Remove random Buildozer submodule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "boxlayout",
     "floatlayout",
     "scrollview",
-    "kivy"
+    "kivy",
+    "Buildozer"
   ],
   "python.analysis.typeCheckingMode": "basic"
 }
